2013-09-29 Philipp Klaus Krause <pkk AT spth.de>

	* device/include/asm/tlcs90,
	  device/include/math.h,
	  device/include/sdcc-lib.h,
	  device/include/stdarg.h,
	  device/lib/tlcs90/Makefile.in,
	  device/lib/tlcs90/divmixed.s,
	  device/lib/tlcs90/modmixed.s,
	  src/z80/gen.c:
	  TLCS-90 library.

2013-09-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/peeph-gbz80.def:
	  Remove broken peephole rule.

2013-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/astlcs90/t90mch.c:
	  Fix handling of 8-bit immediates, patch by Rainer Keuchel.
	* src/stm8/peeph.def:
	  More flexible unreachable jump elimination.
	* configure.in,
	  device/lib/Makefile.in,
	  device/lib/tlcs90,
	  src/z80/main.c:
	  Library for TLCS-90.
	* src/stm8/gen.c:
	  Fix comparisons with operand in y, fix offset in wide pointer read when optimizing for code size, fix and improve stack adjustment.
	* src/z80/peeph-tlcs90.def,
	  src/z80/main.c,
	  src/z80/peep.c:
	  Peephole optimization for TLCS-90.

2013-09-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (operandFromSymbol): don't allocate register
	  equivalents for symbols that can't fit in HC08/S08 registers.
	* src/SDCClrange.c (visit): remove TARGET_HC08_LIKE exception.

2013-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/peep.c:
	  notUsedFrom() for stm8.
	* src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def,
	  support/regression/tests/bug-2228.c:
	  Fix bug #2228.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix type name.
	* support/regression/tests/bug-2222.c:
	  Fix use of uninitialized memory.

2013-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve handling of global variables in addition (and prepare for subtraction).
	* sim/ucsim/stm8.src/inst.cc:
	  Code cleanup.

2013-09-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/reg51.h: fall back to 8052.h
	* doc/sdccman.lyx: pragma exclude bits